[package]
name = "scrabble-bin"
version = "0.1.0"
authors = ["James Baum <james@jamesbaum.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrabble = { path = "scrabble", version = "1.0.0" }
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"
