[package]
name = "scrabble"
version = "1.0.1"
authors = ["James Baum <james@jamesbaum.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.102"
serde_cbor = "0.10.2"
serde_json = "1.0.41"
regex = "1.3.1"
lazy_static = "1.4.0"
